# REDCapMatchResolver

./: .gitignore  .pre-commit-config.yaml  LICENCE  Manifest.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: dependencies.yml  test.yml
docs/: api_docs.md  conf.py  index.rst
docs/source/: conf.py  index.rst  modules.rst  redcapmatchresolver.rst
hooks/: pylint_compute_score.sh  run_coverage.sh  run_documentation.sh  run_last_commit.sh  run_pylint.sh
src/: __init__.py  requirements.txt  setup.py
src/redcapmatchresolver/: __init__.py  __init__.pyi  match_quality.py  match_quality.pyi  match_record_generator.py  match_record_generator.pyi  match_records.py  match_records.pyi  redcap_appointment.py  redcap_appointment.pyi  redcap_clinic.py  redcap_clinic.pyi  redcap_match_resolver.py  redcap_match_resolver.pyi  redcap_patient.py  redcap_patient.pyi  redcap_report_reader.py  redcap_report_reader.pyi  redcap_report_writer.py  redcap_report_writer.pyi  redcap_update.py  redcap_update.pyi  utilities.py  utilities.pyi
src/redcapmatchresolver/data/: Epic DEP with future appts - 04192022 .xlsx
tests/: __init__.py  bogus_patient_report_CRC_partial.txt  bogus_patient_report_CRC_partial_II.txt  bogus_patient_report_ends_before_data.txt  bogus_patient_report_ends_too_soon.txt  bogus_patient_report_missing_fields.txt  bogus_patient_report_missing_values.txt  bogus_patient_report_partial_header.txt  conftest.py  temp_database.db  temp_matches_database.db  test_clinics.py  test_match.py  test_match_quality.py  test_match_record_generator.py  test_match_resolver.py  test_patient.py  test_patient_report.txt  test_patient_report_address.txt  test_patient_report_blank.txt  test_patient_report_parent_child.txt  test_patient_report_relatives.txt  test_patient_report_same.txt  test_redcap_update.py  test_report_reader.py  test_report_writer.py
tests/bad_reports/: blank_crc_decision_patient_report.txt  missing_crc_decision_patient_report.txt  missing_fields_patient_report.txt
