[tool.poetry]
name = "REDCapMatchResolver"
version = "1.2.5"
description = "Assists with human expert review of possible patient matches."
authors = [
    "Kevin J. Delaney <kjdelaney@ucsd.edu>",
]
license = "MIT"
readme = "README.md"

documentation = "https://github.com/DBMI/REDCapMatchResolver"
homepage = "https://github.com/DBMI/REDCapMatchResolver"
repository = "https://github.com/DBMI/REDCapMatchResolver"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "redcapmatchresolver", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7.1, <4.0"
pandas = ">=1.3.5"
tabulate = "^0.9.0"
redcaputilities = {git = "https://github.com/DBMI/REDCapUtilities.git", rev="main"}

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
data-science-types = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
make = "*"
mkdocs = "*"
mkdocstrings = "*"
mkdocs-material = "*"
mypy = "*"
openpyxl = "*"
pandas = "*"
pandas-stubs = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
setuptools = "*"
sphinx = "*"
sphinx_markdown_builder = "*"
tryceratops = "*"
typing = "*"
wheel = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov-report term-missing \
    --no-cov-on-fail \
"""
pythonpath = [
  ".", "src", "src/redcapmatchresolver"
]
testpaths= ["redcapmatchresolver"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
disable_error_code = ["call-arg", "call-overload", "var-annotated"]
